syntax = "proto3";

package com.example.grpc;

import "google/protobuf/empty.proto";

option java_multiple_files = true;
option java_package = "com.example.grpc";
option java_outer_classname = "EmployeeServiceProto";

message Employee {
  int64 id = 1;
  string name = 2;
  string position = 3;
}

message EmployeeRequest {
  int64 id = 1;
}

message EmployeeResponse {
  Employee employee = 1;
}

message CreateEmployeeRequest {
  string name = 1;
  string position = 2;
}

message EmployeeListResponse {
  repeated Employee employees = 1;
}

service EmployeeService {
  rpc CreateEmployee(CreateEmployeeRequest) returns (EmployeeResponse);
  rpc GetEmployee(EmployeeRequest) returns (EmployeeResponse);
  rpc GetAllEmployees(google.protobuf.Empty) returns (EmployeeListResponse);
}
